# data-science-projects

./: .gitignore  README.md
superheroine_fatigue/: .gitignore  README.md  agents.py  movies-260704.csv  notebook.py  pyproject.toml  python.py
superheroine_fatigue/archive/: agents.py  box-office-260704.csv
wsl/: .gitignore  README.md  functions.py  m-notebook.py  pyproject.toml  r-notebook.py
wsl/data/: female_teams_23.csv  wsl-2025-UTC.csv
