[project]
name = "superheroine-fatigue"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.2.2",
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "marimo[sql]>=0.23.13",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.4.0",
    "pydantic-ai-slim[duckduckgo,exa,huggingface,openai,tavily]>=2.4.0",
    "python-dotenv>=1.2.2",
]
